--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "postcss ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@radioactive-labs/plutonium": "^0.3.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "flowbite-typography": "^1.0.5",
+    "marked": "^15.0.6",
     "postcss": "^8.5.1",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^4.0.0"
   }
 }
