--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "app",
   "private": true,
   "devDependencies": {
-    "esbuild": "^0.24.2"
+    "esbuild": "^0.24.2",
+    "postcss-import": "^16.1.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
@@ -13,6 +14,7 @@
     "@hotwired/turbo-rails": "^8.0.12",
     "@radioactive-labs/plutonium": "^0.3.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.1",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
@@ -20,6 +22,6 @@
     "marked": "^15.0.6",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^3"
   }
 }
