--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^15.0.6",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
+    "prettier-plugin-erb": "^0.4.0",
     "tailwindcss": "^3"
   }
 }
