--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
-    "@radioactive-labs/plutonium": "^0.3.2",
+    "@radioactive-labs/plutonium": "^0.4.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.0.1",
+    "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "flowbite-typography": "^1.0.5",
-    "marked": "^15.0.6",
-    "postcss": "^8.5.1",
+    "marked": "^15.0.7",
+    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
+    "prettier": "^3.4.2",
     "prettier-plugin-erb": "^0.4.0",
-    "tailwindcss": "^3"
+    "tailwindcss": "^4.0.9"
   }
 }
